<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="userModel"
            type="com.example.arnold.takehome.models.userModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/edt_user"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/btn_search"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:hint="Enter a github user id"
                    android:inputType="text"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="14dp"
                android:onClick="search"
                android:text="search" />

            <ImageView
                android:id="@+id/userAvatar"
                android:layout_width="91dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="78dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lblUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userAvatar"
                android:layout_centerHorizontal="true"
                android:text="Username"
                android:textStyle="bold"
                android:visibility="invisible"/>

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="341dp"
                android:layout_below="@+id/userAvatar"
                android:layout_marginTop="25dp"
                android:background="@color/grey"
                android:orientation="vertical">

            </FrameLayout>
        </RelativeLayout>

        <include layout="@layout/repo_info"/>
    </RelativeLayout>
</layout>